--- a/AIF360-Huangrui Modified/examples/ROC_Law.ipynb
+++ b/AIF360-Huangrui Modified/examples/ROC_Law.ipynb
@@ -20,9 +20,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
+      "pip install 'aif360[AdversarialDebiasing]'\n",
+      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
+      "pip install 'aif360[AdversarialDebiasing]'\n",
+      "WARNING:root:No module named 'fairlearn': ExponentiatedGradientReduction will be unavailable. To install, run:\n",
+      "pip install 'aif360[Reductions]'\n",
+      "WARNING:root:No module named 'fairlearn': GridSearchReduction will be unavailable. To install, run:\n",
+      "pip install 'aif360[Reductions]'\n",
+      "WARNING:root:No module named 'fairlearn': GridSearchReduction will be unavailable. To install, run:\n",
+      "pip install 'aif360[Reductions]'\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "# Load all necessary packages\n",
@@ -57,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +118,8 @@
     "        data.drop(['ID'], axis=1, inplace=True)\n",
     "        #drop indxgrp indxgrp2 because they are useless\n",
     "        data.drop(['indxgrp','indxgrp2'], axis=1, inplace=True)\n",
+    "        # drop 'bar1', 'bar1_yr', 'bar2', 'bar2_yr' because they indicate the result as pass_bar\n",
+    "        data.drop(['bar1','bar1_yr','bar2','bar2_yr'], axis=1, inplace=True)\n",
     "        # drop NaN records for pass_bar\n",
     "        data = data[(data['pass_bar'] == 1) | (data['pass_bar'] == 0)]\n",
     "        #drop gpa beacuse it is the same as ugpa\n",
@@ -132,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -175,10 +194,6 @@
        " 'zfygpa',\n",
        " 'DOB_yr',\n",
        " 'zgpa',\n",
-       " 'bar1',\n",
-       " 'bar1_yr',\n",
-       " 'bar2',\n",
-       " 'bar2_yr',\n",
        " 'fulltime',\n",
        " 'fam_inc',\n",
        " 'age',\n",
@@ -189,7 +204,7 @@
        " 'dropout']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,17 +308,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_orig_train_valid= dataset_train2.copy()\n",
-    "dataset_orig_test= dataset_test2.copy()"
+    "dataset_orig_train_valid= dataset_train5.copy()\n",
+    "dataset_orig_test= dataset_test5.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +354,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(13072, 22)\n"
+      "(13073, 18)\n"
      ]
     },
     {
@@ -415,7 +430,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['decile1b', 'decile3', 'decile1', 'race', 'cluster', 'lsat', 'ugpa', 'zfygpa', 'DOB_yr', 'zgpa', 'bar1', 'bar1_yr', 'bar2', 'bar2_yr', 'fulltime', 'fam_inc', 'age', 'parttime', 'sex', 'tier', 'index6040', 'dropout']\n"
+      "['decile1b', 'decile3', 'decile1', 'race', 'cluster', 'lsat', 'ugpa', 'zfygpa', 'DOB_yr', 'zgpa', 'fulltime', 'fam_inc', 'age', 'parttime', 'sex', 'tier', 'index6040', 'dropout']\n"
      ]
     }
    ],
@@ -443,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +477,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Difference in mean outcomes between unprivileged and privileged groups = -0.116947\n"
+      "Difference in mean outcomes between unprivileged and privileged groups = -0.113457\n"
      ]
     }
    ],
@@ -483,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,15 +558,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best balanced accuracy (no fairness constraints) = 1.0000\n",
-      "Optimal classification threshold (no fairness constraints) = 0.0100\n"
+      "Best balanced accuracy (no fairness constraints) = 0.8307\n",
+      "Optimal classification threshold (no fairness constraints) = 0.9504\n"
      ]
     }
    ],
@@ -589,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,15 +619,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal classification threshold (with fairness constraints) = 0.0100\n",
-      "Optimal ROC margin = 0.0000\n"
+      "Optimal classification threshold (with fairness constraints) = 0.9108\n",
+      "Optimal ROC margin = 0.0601\n"
      ]
     }
    ],
@@ -630,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -661,12 +676,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balanced accuracy = 1.0000\n",
-      "Statistical parity difference = -0.0954\n",
-      "Disparate impact = 0.9016\n",
-      "Average odds difference = 0.0000\n",
-      "Equal opportunity difference = 0.0000\n",
-      "Theil index = 0.0000\n"
+      "Balanced accuracy = 0.8307\n",
+      "Statistical parity difference = -0.4416\n",
+      "Disparate impact = 0.4611\n",
+      "Average odds difference = -0.2636\n",
+      "Equal opportunity difference = -0.3995\n",
+      "Theil index = 0.2365\n"
      ]
     }
    ],
@@ -685,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -716,12 +731,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balanced accuracy = 1.0000\n",
-      "Statistical parity difference = -0.0954\n",
-      "Disparate impact = 0.9016\n",
-      "Average odds difference = 0.0000\n",
-      "Equal opportunity difference = 0.0000\n",
-      "Theil index = 0.0000\n"
+      "Balanced accuracy = 0.7874\n",
+      "Statistical parity difference = -0.0852\n",
+      "Disparate impact = 0.8827\n",
+      "Average odds difference = 0.0847\n",
+      "Equal opportunity difference = -0.0332\n",
+      "Theil index = 0.2858\n"
      ]
     }
    ],
@@ -737,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -785,12 +800,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balanced accuracy = 1.0000\n",
-      "Statistical parity difference = -0.1132\n",
-      "Disparate impact = 0.8829\n",
-      "Average odds difference = 0.0000\n",
-      "Equal opportunity difference = 0.0000\n",
-      "Theil index = 0.0000\n"
+      "Balanced accuracy = 0.7783\n",
+      "Statistical parity difference = -0.4176\n",
+      "Disparate impact = 0.4876\n",
+      "Average odds difference = -0.3534\n",
+      "Equal opportunity difference = -0.3792\n",
+      "Theil index = 0.2407\n"
      ]
     }
    ],
@@ -809,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -840,12 +855,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balanced accuracy = 1.0000\n",
-      "Statistical parity difference = -0.1132\n",
-      "Disparate impact = 0.8829\n",
-      "Average odds difference = 0.0000\n",
-      "Equal opportunity difference = 0.0000\n",
-      "Theil index = 0.0000\n"
+      "Balanced accuracy = 0.7695\n",
+      "Statistical parity difference = -0.0699\n",
+      "Disparate impact = 0.9024\n",
+      "Average odds difference = -0.0335\n",
+      "Equal opportunity difference = -0.0165\n",
+      "Theil index = 0.2986\n"
      ]
     }
    ],
@@ -861,15 +876,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Error for the test dataset is 0.0\n",
-      "The Equal opportunity difference for the test dataset is 0.0\n"
+      "The Error for the test dataset is 0.2305\n",
+      "The Equal opportunity difference for the test dataset is -0.01645\n"
      ]
     }
    ],
