--- a/AIF360-Huangrui Modified/examples/ROC_Zindi.ipynb
+++ b/AIF360-Huangrui Modified/examples/ROC_Zindi.ipynb
@@ -51,7 +51,6 @@
     "import pandas as pd\n",
     "from aif360.datasets import StandardDataset\n",
     "from aif360.metrics import ClassificationMetric, BinaryLabelDatasetMetric\n",
-    "from aif360.metrics.utils import compute_boolean_conditioning_vector\n",
     "from aif360.algorithms.postprocessing.reject_option_classification\\\n",
     "        import RejectOptionClassification\n",
     "from common_utils import compute_metrics\n",
@@ -69,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Huangrui's Law School pass bar"
+    "## Huangrui's financial-inclusion-in-africa"
    ]
   },
   {
@@ -78,17 +77,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LawSchoolPassBarDataset(StandardDataset):\n",
-    "    \"\"\"Law School PassBar dataset.\n",
-    "\n",
-    "    See https://github.com/microsoft/tempeh for details.\n",
+    "class Zindi(StandardDataset):\n",
+    "    \"\"\"financial-inclusion-in-africa dataset.\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, label_name='pass_bar', favorable_classes=[1],  \n",
-    "                 protected_attribute_names=['race'],\n",
+    "    def __init__(self, label_name='Y', favorable_classes=[1],  \n",
+    "                 protected_attribute_names=['sex'],\n",
     "                 privileged_classes=[[1]],\n",
     "                 instance_weights_name=None,\n",
-    "                 categorical_features=[],\n",
+    "                 categorical_features=[\"location_type\",\"country\",\"relationship_with_head\",\"marital_status\",\"education_level\",\"job_type\"],\n",
     "                 features_to_drop=[],\n",
     "                 features_to_keep=[],\n",
     "                 na_values=[], custom_preprocessing=None,\n",
@@ -96,41 +93,18 @@
     "        \"\"\"See :obj:`RegressionDataset` for a description of the arguments.\"\"\"\n",
     "        \n",
     "\n",
-    "        data = pd.read_csv(\"./Huangrui/law/bar_pass_prediction.csv\")\n",
-    "        # data contains 'sex', 'gender', and 'male' which are all identical except for the type;\n",
-    "        data.drop([\"sex\"], axis=1, inplace=True)\n",
-    "        data.drop(['gender'], axis=1, inplace=True)\n",
-    "        data.rename(columns={'male': 'sex'}, inplace=True)\n",
-    "        #drop grad because every one is not grad\n",
-    "        data.drop(['grad'], axis=1, inplace=True)\n",
-    "        #conver bar1, bar2 to 0/1\n",
-    "        data.bar1 = data.bar1.apply(lambda x: 1 if x == \"P\" else 0)\n",
-    "        data.bar2 = data.bar2.apply(lambda x: 1 if x == \"P\" else 0)\n",
-    "        # filter out all records except the ones with the most common two races\n",
-    "        data = data.assign(race=(data[\"race1\"] == \"white\") * 1)\n",
-    "        data.drop(['race1','race2',\"other\",\"asian\",\"black\",\"hisp\"], axis=1, inplace=True)\n",
-    "        #drop dnn_bar_pass_prediction, because it is the similar to pass_bar and is not a good data\n",
-    "        data.drop(['dnn_bar_pass_prediction'], axis=1, inplace=True)\n",
-    "        # encode dropout as 0/1\n",
-    "        data = data.assign(dropout=(data[\"Dropout\"] == b\"YES\") * 1)\n",
-    "        data.drop(['Dropout'], axis=1, inplace=True)\n",
-    "        #drop ID because it is useless\n",
-    "        data.drop(['ID'], axis=1, inplace=True)\n",
-    "        #drop indxgrp indxgrp2 because they are useless\n",
-    "        data.drop(['indxgrp','indxgrp2'], axis=1, inplace=True)\n",
-    "        # drop 'bar1', 'bar1_yr', 'bar2', 'bar2_yr' because they indicate the result as pass_bar\n",
-    "        data.drop(['bar1','bar1_yr','bar2','bar2_yr'], axis=1, inplace=True)\n",
-    "        # drop NaN records for pass_bar\n",
-    "        data = data[(data['pass_bar'] == 1) | (data['pass_bar'] == 0)]\n",
-    "        #drop gpa beacuse it is the same as ugpa\n",
-    "        data.drop(['gpa'], axis=1, inplace=True)\n",
-    "        #drop bar_passed, bar, because they have the same value as pass_bar\n",
-    "        data.drop(['bar_passed','bar'], axis=1, inplace=True)\n",
-    "        # drop NaN records for features\n",
-    "        data = data[np.isfinite(data[\"lsat\"]) & np.isfinite(data['ugpa'])]\n",
+    "        train = pd.read_csv('./Huangrui/zindi/Train.csv')\n",
+    "        test = pd.read_csv('./Huangrui/zindi/Test.csv')\n",
+    "        df = pd.concat([train, test], axis=0, ignore_index=True)\n",
+    "        df.rename(columns={'gender_of_respondent':'sex','age_of_respondent':'age', 'bank_account':'Y' }, inplace=True)\n",
+    "        df.Y = df.Y.map({'Yes':1, 'No':0})\n",
+    "        df.sex = df.sex.map({\"Male\":1,\"Female\":0})\n",
+    "        df.cellphone_access = df.cellphone_access.map({'Yes':1, 'No':0})\n",
+    "        df.drop(['uniqueid'], axis=1, inplace=True)\n",
+    "        df.dropna(inplace=True)\n",
     "\n",
-    "        super(LawSchoolPassBarDataset, self).__init__(\n",
-    "            df=data, label_name=label_name,\n",
+    "        super(Zindi, self).__init__(\n",
+    "            df=df, label_name=label_name,\n",
     "            favorable_classes=favorable_classes,\n",
     "            protected_attribute_names=protected_attribute_names,\n",
     "            privileged_classes=privileged_classes,\n",
@@ -153,19 +127,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:Missing Data: 1980 rows removed from LawSchoolPassBarDataset.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset_orig = LawSchoolPassBarDataset()\n",
-    "privileged_groups = [{'race': 1}]\n",
-    "unprivileged_groups = [{'race': 0}]\n",
+    "dataset_orig = Zindi()\n",
+    "privileged_groups = [{'sex': 1}]\n",
+    "unprivileged_groups = [{'sex': 0}]\n",
     "# Metric used (should be one of allowed_metrics)\n",
     "metric_name = \"Equal opportunity difference\"\n",
     "#random seed for calibrated equal odds prediction\n",
@@ -184,24 +150,44 @@
     {
      "data": {
       "text/plain": [
-       "['decile1b',\n",
-       " 'decile3',\n",
-       " 'decile1',\n",
-       " 'race',\n",
-       " 'cluster',\n",
-       " 'lsat',\n",
-       " 'ugpa',\n",
-       " 'zfygpa',\n",
-       " 'DOB_yr',\n",
-       " 'zgpa',\n",
-       " 'fulltime',\n",
-       " 'fam_inc',\n",
+       "['year',\n",
+       " 'cellphone_access',\n",
+       " 'household_size',\n",
        " 'age',\n",
-       " 'parttime',\n",
        " 'sex',\n",
-       " 'tier',\n",
-       " 'index6040',\n",
-       " 'dropout']"
+       " 'country=Kenya',\n",
+       " 'country=Rwanda',\n",
+       " 'country=Tanzania',\n",
+       " 'country=Uganda',\n",
+       " 'location_type=Rural',\n",
+       " 'location_type=Urban',\n",
+       " 'relationship_with_head=Child',\n",
+       " 'relationship_with_head=Head of Household',\n",
+       " 'relationship_with_head=Other non-relatives',\n",
+       " 'relationship_with_head=Other relative',\n",
+       " 'relationship_with_head=Parent',\n",
+       " 'relationship_with_head=Spouse',\n",
+       " 'marital_status=Divorced/Seperated',\n",
+       " 'marital_status=Dont know',\n",
+       " 'marital_status=Married/Living together',\n",
+       " 'marital_status=Single/Never Married',\n",
+       " 'marital_status=Widowed',\n",
+       " 'education_level=No formal education',\n",
+       " 'education_level=Other/Dont know/RTA',\n",
+       " 'education_level=Primary education',\n",
+       " 'education_level=Secondary education',\n",
+       " 'education_level=Tertiary education',\n",
+       " 'education_level=Vocational/Specialised training',\n",
+       " 'job_type=Dont Know/Refuse to answer',\n",
+       " 'job_type=Farming and Fishing',\n",
+       " 'job_type=Formally employed Government',\n",
+       " 'job_type=Formally employed Private',\n",
+       " 'job_type=Government Dependent',\n",
+       " 'job_type=Informally employed',\n",
+       " 'job_type=No Income',\n",
+       " 'job_type=Other Income',\n",
+       " 'job_type=Remittance Dependent',\n",
+       " 'job_type=Self employed']"
       ]
      },
      "execution_count": 4,
@@ -286,17 +272,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protected_name = \"race\"\n",
-    "dataset_train1.convert_to_dataframe()[0].to_csv(\"Huangrui/law/{}/law_train1.csv\".format(protected_name),index=False)\n",
-    "dataset_test1.convert_to_dataframe()[0].to_csv(\"Huangrui/law/{}/law_test1.csv\".format(protected_name),index=False)\n",
-    "dataset_train2.convert_to_dataframe()[0].to_csv(\"Huangrui/law/{}/law_train2.csv\".format(protected_name),index=False)\n",
-    "dataset_test2.convert_to_dataframe()[0].to_csv(\"Huangrui/law/{}/law_test2.csv\".format(protected_name),index=False)\n",
-    "dataset_train3.convert_to_dataframe()[0].to_csv(\"Huangrui/law/{}/law_train3.csv\".format(protected_name),index=False)\n",
-    "dataset_test3.convert_to_dataframe()[0].to_csv(\"Huangrui/law/{}/law_test3.csv\".format(protected_name),index=False)\n",
-    "dataset_train4.convert_to_dataframe()[0].to_csv(\"Huangrui/law/{}/law_train4.csv\".format(protected_name),index=False)\n",
-    "dataset_test4.convert_to_dataframe()[0].to_csv(\"Huangrui/law/{}/law_test4.csv\".format(protected_name),index=False)\n",
-    "dataset_train5.convert_to_dataframe()[0].to_csv(\"Huangrui/law/{}/law_train5.csv\".format(protected_name),index=False)\n",
-    "dataset_test5.convert_to_dataframe()[0].to_csv(\"Huangrui/law/{}/law_test5.csv\".format(protected_name),index=False)\n"
+    "protected_name = \"sex\"\n",
+    "dataset_train1.convert_to_dataframe()[0].to_csv(\"Huangrui/zindi/{}/zindi_train1.csv\".format(protected_name),index=False)\n",
+    "dataset_test1.convert_to_dataframe()[0].to_csv(\"Huangrui/zindi/{}/zindi_test1.csv\".format(protected_name),index=False)\n",
+    "dataset_train2.convert_to_dataframe()[0].to_csv(\"Huangrui/zindi/{}/zindi_train2.csv\".format(protected_name),index=False)\n",
+    "dataset_test2.convert_to_dataframe()[0].to_csv(\"Huangrui/zindi/{}/zindi_test2.csv\".format(protected_name),index=False)\n",
+    "dataset_train3.convert_to_dataframe()[0].to_csv(\"Huangrui/zindi/{}/zindi_train3.csv\".format(protected_name),index=False)\n",
+    "dataset_test3.convert_to_dataframe()[0].to_csv(\"Huangrui/zindi/{}/zindi_test3.csv\".format(protected_name),index=False)\n",
+    "dataset_train4.convert_to_dataframe()[0].to_csv(\"Huangrui/zindi/{}/zindi_train4.csv\".format(protected_name),index=False)\n",
+    "dataset_test4.convert_to_dataframe()[0].to_csv(\"Huangrui/zindi/{}/zindi_test4.csv\".format(protected_name),index=False)\n",
+    "dataset_train5.convert_to_dataframe()[0].to_csv(\"Huangrui/zindi/{}/zindi_train5.csv\".format(protected_name),index=False)\n",
+    "dataset_test5.convert_to_dataframe()[0].to_csv(\"Huangrui/zindi/{}/zindi_test5.csv\".format(protected_name),index=False)\n"
    ]
   },
   {
@@ -308,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(13073, 18)\n"
+      "(15055, 38)\n"
      ]
     },
     {
@@ -392,7 +378,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['race']\n"
+      "['sex']\n"
      ]
     },
     {
@@ -430,7 +416,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['decile1b', 'decile3', 'decile1', 'race', 'cluster', 'lsat', 'ugpa', 'zfygpa', 'DOB_yr', 'zgpa', 'fulltime', 'fam_inc', 'age', 'parttime', 'sex', 'tier', 'index6040', 'dropout']\n"
+      "['year', 'cellphone_access', 'household_size', 'age', 'sex', 'country=Kenya', 'country=Rwanda', 'country=Tanzania', 'country=Uganda', 'location_type=Rural', 'location_type=Urban', 'relationship_with_head=Child', 'relationship_with_head=Head of Household', 'relationship_with_head=Other non-relatives', 'relationship_with_head=Other relative', 'relationship_with_head=Parent', 'relationship_with_head=Spouse', 'marital_status=Divorced/Seperated', 'marital_status=Dont know', 'marital_status=Married/Living together', 'marital_status=Single/Never Married', 'marital_status=Widowed', 'education_level=No formal education', 'education_level=Other/Dont know/RTA', 'education_level=Primary education', 'education_level=Secondary education', 'education_level=Tertiary education', 'education_level=Vocational/Specialised training', 'job_type=Dont Know/Refuse to answer', 'job_type=Farming and Fishing', 'job_type=Formally employed Government', 'job_type=Formally employed Private', 'job_type=Government Dependent', 'job_type=Informally employed', 'job_type=No Income', 'job_type=Other Income', 'job_type=Remittance Dependent', 'job_type=Self employed']\n"
      ]
     }
    ],
@@ -458,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +463,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Difference in mean outcomes between unprivileged and privileged groups = -0.119759\n"
+      "Difference in mean outcomes between unprivileged and privileged groups = -0.085992\n"
      ]
     }
    ],
@@ -498,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,15 +544,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best balanced accuracy (no fairness constraints) = 0.8158\n",
-      "Optimal classification threshold (no fairness constraints) = 0.9405\n"
+      "Best balanced accuracy (no fairness constraints) = 0.7804\n",
+      "Optimal classification threshold (no fairness constraints) = 0.1684\n"
      ]
     }
    ],
@@ -604,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,15 +605,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal classification threshold (with fairness constraints) = 0.9108\n",
-      "Optimal ROC margin = 0.0601\n"
+      "Optimal classification threshold (with fairness constraints) = 0.1684\n",
+      "Optimal ROC margin = 0.0069\n"
      ]
     }
    ],
@@ -645,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -676,12 +662,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balanced accuracy = 0.8158\n",
-      "Statistical parity difference = -0.4005\n",
-      "Disparate impact = 0.5267\n",
-      "Average odds difference = -0.2748\n",
-      "Equal opportunity difference = -0.3606\n",
-      "Theil index = 0.2008\n"
+      "Balanced accuracy = 0.7804\n",
+      "Statistical parity difference = -0.1553\n",
+      "Disparate impact = 0.5007\n",
+      "Average odds difference = -0.0841\n",
+      "Equal opportunity difference = -0.0453\n",
+      "Theil index = 0.0783\n"
      ]
     }
    ],
@@ -700,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -731,12 +717,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balanced accuracy = 0.7943\n",
-      "Statistical parity difference = -0.0886\n",
-      "Disparate impact = 0.8795\n",
-      "Average odds difference = 0.0303\n",
-      "Equal opportunity difference = -0.0402\n",
-      "Theil index = 0.2728\n"
+      "Balanced accuracy = 0.7811\n",
+      "Statistical parity difference = -0.1387\n",
+      "Disparate impact = 0.5347\n",
+      "Average odds difference = -0.0728\n",
+      "Equal opportunity difference = -0.0417\n",
+      "Theil index = 0.0780\n"
      ]
     }
    ],
@@ -752,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -800,12 +786,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balanced accuracy = 0.7780\n",
-      "Statistical parity difference = -0.4329\n",
-      "Disparate impact = 0.4886\n",
-      "Average odds difference = -0.3841\n",
-      "Equal opportunity difference = -0.3915\n",
-      "Theil index = 0.2067\n"
+      "Balanced accuracy = 0.7687\n",
+      "Statistical parity difference = -0.1735\n",
+      "Disparate impact = 0.4828\n",
+      "Average odds difference = -0.1408\n",
+      "Equal opportunity difference = -0.1498\n",
+      "Theil index = 0.0849\n"
      ]
     }
    ],
@@ -824,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -855,12 +841,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balanced accuracy = 0.7646\n",
-      "Statistical parity difference = -0.0915\n",
-      "Disparate impact = 0.8738\n",
-      "Average odds difference = -0.0480\n",
-      "Equal opportunity difference = -0.0415\n",
-      "Theil index = 0.2927\n"
+      "Balanced accuracy = 0.7669\n",
+      "Statistical parity difference = -0.1535\n",
+      "Disparate impact = 0.5216\n",
+      "Average odds difference = -0.1197\n",
+      "Equal opportunity difference = -0.1272\n",
+      "Theil index = 0.0854\n"
      ]
     }
    ],
@@ -876,15 +862,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Error for the test dataset is 0.2354\n",
-      "The Equal opportunity difference for the test dataset is -0.04152\n"
+      "The Error for the test dataset is 0.2331\n",
+      "The Equal opportunity difference for the test dataset is -0.1272\n"
      ]
     }
    ],
