--- a/AIF360-Huangrui Modified/examples/ROC_Bank.ipynb
+++ b/AIF360-Huangrui Modified/examples/ROC_Bank.ipynb
@@ -27,20 +27,59 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\scipy\\__init__.py:177: UserWarning: A NumPy version >=1.18.5 and <1.26.0 is required for this version of SciPy (detected version 1.26.2\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n",
-      "WARNING:root:No module named 'tempeh': LawSchoolGPADataset will be unavailable. To install, run:\n",
+      "WARNING:root:\n",
+      "`load_boston` has been removed from scikit-learn since version 1.2.\n",
+      "\n",
+      "The Boston housing prices dataset has an ethical problem: as\n",
+      "investigated in [1], the authors of this dataset engineered a\n",
+      "non-invertible variable \"B\" assuming that racial self-segregation had a\n",
+      "positive impact on house prices [2]. Furthermore the goal of the\n",
+      "research that led to the creation of this dataset was to study the\n",
+      "impact of air quality but it did not give adequate demonstration of the\n",
+      "validity of this assumption.\n",
+      "\n",
+      "The scikit-learn maintainers therefore strongly discourage the use of\n",
+      "this dataset unless the purpose of the code is to study and educate\n",
+      "about ethical issues in data science and machine learning.\n",
+      "\n",
+      "In this special case, you can fetch the dataset from the original\n",
+      "source::\n",
+      "\n",
+      "    import pandas as pd\n",
+      "    import numpy as np\n",
+      "\n",
+      "    data_url = \"http://lib.stat.cmu.edu/datasets/boston\"\n",
+      "    raw_df = pd.read_csv(data_url, sep=\"\\s+\", skiprows=22, header=None)\n",
+      "    data = np.hstack([raw_df.values[::2, :], raw_df.values[1::2, :2]])\n",
+      "    target = raw_df.values[1::2, 2]\n",
+      "\n",
+      "Alternative datasets include the California housing dataset and the\n",
+      "Ames housing dataset. You can load the datasets as follows::\n",
+      "\n",
+      "    from sklearn.datasets import fetch_california_housing\n",
+      "    housing = fetch_california_housing()\n",
+      "\n",
+      "for the California housing dataset and::\n",
+      "\n",
+      "    from sklearn.datasets import fetch_openml\n",
+      "    housing = fetch_openml(name=\"house_prices\", as_frame=True)\n",
+      "\n",
+      "for the Ames housing dataset.\n",
+      "\n",
+      "[1] M Carlisle.\n",
+      "\"Racist data destruction?\"\n",
+      "<https://medium.com/@docintangible/racist-data-destruction-113e3eff54a8>\n",
+      "\n",
+      "[2] Harrison Jr, David, and Daniel L. Rubinfeld.\n",
+      "\"Hedonic housing prices and the demand for clean air.\"\n",
+      "Journal of environmental economics and management 5.1 (1978): 81-102.\n",
+      "<https://www.researchgate.net/publication/4974606_Hedonic_housing_prices_and_the_demand_for_clean_air>\n",
+      ": LawSchoolGPADataset will be unavailable. To install, run:\n",
       "pip install 'aif360[LawSchoolGPA]'\n",
       "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
       "pip install 'aif360[AdversarialDebiasing]'\n",
       "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
-      "pip install 'aif360[AdversarialDebiasing]'\n",
-      "WARNING:root:No module named 'fairlearn': ExponentiatedGradientReduction will be unavailable. To install, run:\n",
-      "pip install 'aif360[Reductions]'\n",
-      "WARNING:root:No module named 'fairlearn': GridSearchReduction will be unavailable. To install, run:\n",
-      "pip install 'aif360[Reductions]'\n",
-      "WARNING:root:No module named 'fairlearn': GridSearchReduction will be unavailable. To install, run:\n",
-      "pip install 'aif360[Reductions]'\n"
+      "pip install 'aif360[AdversarialDebiasing]'\n"
      ]
     }
    ],
@@ -67,7 +106,10 @@
     "\n",
     "from IPython.display import Markdown, display\n",
     "import matplotlib.pyplot as plt\n",
-    "from ipywidgets import interactive, FloatSlider"
+    "from ipywidgets import interactive, FloatSlider\n",
+    "from sklearn.linear_model import Lasso\n",
+    "import pickle\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -98,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +248,7 @@
     "dataset_train4.convert_to_dataframe()[0].to_csv(\"Huangrui/bank/{}/bank_train4.csv\".format(protected_name),index=False)\n",
     "dataset_test4.convert_to_dataframe()[0].to_csv(\"Huangrui/bank/{}/bank_test4.csv\".format(protected_name),index=False)\n",
     "dataset_train5.convert_to_dataframe()[0].to_csv(\"Huangrui/bank/{}/bank_train5.csv\".format(protected_name),index=False)\n",
-    "dataset_test5.convert_to_dataframe()[0].to_csv(\"Huangrui/bank/{}/bank_test5.csv\".format(protected_name),index=False)\n"
+    "dataset_test5.convert_to_dataframe()[0].to_csv(\"Huangrui/bank/{}/bank_test5.csv\".format(protected_name),index=False)"
    ]
   },
   {
@@ -218,12 +260,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset_orig_train_valid= dataset_train5.copy()\n",
     "dataset_orig_test= dataset_test5.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Logistic regression classifier and predictions\n",
+    "scale_orig = StandardScaler()\n",
+    "X_train = scale_orig.fit_transform(selected_dataset.features)\n",
+    "y_train = selected_dataset.labels.ravel()\n",
+    "\n",
+    "X_test = scale_orig.fit_transform(_.features)\n",
+    "y_test = _.labels.ravel()\n",
+    "\n",
+    "\n",
+    "lmod = Lasso(alpha = 0.001)\n",
+    "lmod.fit(X_train, y_train)\n",
+    "y_train_pred = lmod.predict(X_train)>0.5\n",
+    "y_test_pred = lmod.predict(X_test)>0.5\n",
+    "\n",
+    "dataset_orig_train_pred = selected_dataset.copy(deepcopy=True)\n",
+    "dataset_orig_train_pred.labels = y_train_pred\n",
+    "\n",
+    "dataset_orig_test_pred = _.copy(deepcopy=True)\n",
+    "dataset_orig_test_pred.labels = y_test_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balanced accuracy = 0.6583\n",
+      "Statistical parity difference = 0.0657\n",
+      "Disparate impact = 2.0659\n",
+      "Average odds difference = 0.0348\n",
+      "Equal opportunity difference = 0.0511\n",
+      "Theil index = 0.0941\n"
+     ]
+    }
+   ],
+   "source": [
+    "metric_test_aft = compute_metrics(_, dataset_orig_test_pred, \n",
+    "                unprivileged_groups, privileged_groups)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 看decision maker的 bias 和 error"
    ]
   },
   {
@@ -811,10 +912,12 @@
     }
    ],
    "source": [
-    "metric_test_aft[\"Balanced accuracy\"]\n",
+    "#自己计算Error\n",
+    "\n",
+    "\n",
     "metric_test_aft[\"Equal opportunity difference\"]\n",
     "print(\"The Error for the test dataset is {:.4}\".format(1-metric_test_aft[\"Balanced accuracy\"]))\n",
-    "print(\"The Equal opportunity difference for the test dataset is {:.4}\".format(metric_test_aft[\"Equal opportunity difference\"]))"
+    "print(\"The Equal opportunity difference for the test dataset is {:.4}\".format(abs(metric_test_aft[\"Equal opportunity difference\"])))"
    ]
   }
  ],
