--- a/experiment_analysis.ipynb
+++ b/experiment_analysis.ipynb
@@ -106,75 +106,75 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>80</th>\n",
+       "      <th>120</th>\n",
        "      <td>H1</td>\n",
-       "      <td>zindi</td>\n",
-       "      <td>sex</td>\n",
+       "      <td>Bank</td>\n",
+       "      <td>age</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.127338</td>\n",
-       "      <td>0.016820</td>\n",
+       "      <td>0.116123</td>\n",
+       "      <td>0.104376</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>81</th>\n",
+       "      <th>121</th>\n",
        "      <td>H1</td>\n",
-       "      <td>zindi</td>\n",
-       "      <td>sex</td>\n",
+       "      <td>Bank</td>\n",
+       "      <td>age</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.119235</td>\n",
-       "      <td>0.017389</td>\n",
+       "      <td>0.106446</td>\n",
+       "      <td>0.207724</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>82</th>\n",
+       "      <th>122</th>\n",
        "      <td>H1</td>\n",
-       "      <td>zindi</td>\n",
-       "      <td>sex</td>\n",
+       "      <td>Bank</td>\n",
+       "      <td>age</td>\n",
        "      <td>1.0</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.017389</td>\n",
-       "      <td>0.117535</td>\n",
+       "      <td>0.107758</td>\n",
+       "      <td>0.142440</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>83</th>\n",
+       "      <th>123</th>\n",
        "      <td>H1</td>\n",
-       "      <td>zindi</td>\n",
-       "      <td>sex</td>\n",
+       "      <td>Bank</td>\n",
+       "      <td>age</td>\n",
        "      <td>1.0</td>\n",
        "      <td>4</td>\n",
-       "      <td>0.116472</td>\n",
-       "      <td>0.017234</td>\n",
+       "      <td>0.107594</td>\n",
+       "      <td>0.225463</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>84</th>\n",
+       "      <th>124</th>\n",
        "      <td>H1</td>\n",
-       "      <td>zindi</td>\n",
-       "      <td>sex</td>\n",
+       "      <td>Bank</td>\n",
+       "      <td>age</td>\n",
        "      <td>1.0</td>\n",
        "      <td>5</td>\n",
-       "      <td>0.122635</td>\n",
-       "      <td>0.018753</td>\n",
+       "      <td>0.109562</td>\n",
+       "      <td>0.135684</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>85 rows × 7 columns</p>\n",
+       "<p>125 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Model dataset protected_feature  budget  K     Error  Unfairness\n",
-       "0    ROC   Adult              race     1.0  1  0.256886    0.049286\n",
-       "1    ROC   Adult              race     1.0  2  0.226968    0.044753\n",
-       "2    ROC   Adult              race     1.0  3  0.216967    0.039224\n",
-       "3    ROC   Adult              race     1.0  4  0.223176    0.048689\n",
-       "4    ROC   Adult              race     1.0  5  0.215509    0.049205\n",
-       "..   ...     ...               ...     ... ..       ...         ...\n",
-       "80    H1   zindi               sex     1.0  1  0.127338    0.016820\n",
-       "81    H1   zindi               sex     1.0  2  0.119235    0.017389\n",
-       "82    H1   zindi               sex     1.0  3  0.017389    0.117535\n",
-       "83    H1   zindi               sex     1.0  4  0.116472    0.017234\n",
-       "84    H1   zindi               sex     1.0  5  0.122635    0.018753\n",
+       "    Model dataset protected_feature  budget  K     Error  Unfairness\n",
+       "0     ROC   Adult              race     1.0  1  0.256886    0.049286\n",
+       "1     ROC   Adult              race     1.0  2  0.226968    0.044753\n",
+       "2     ROC   Adult              race     1.0  3  0.216967    0.039224\n",
+       "3     ROC   Adult              race     1.0  4  0.223176    0.048689\n",
+       "4     ROC   Adult              race     1.0  5  0.215509    0.049205\n",
+       "..    ...     ...               ...     ... ..       ...         ...\n",
+       "120    H1    Bank               age     1.0  1  0.116123    0.104376\n",
+       "121    H1    Bank               age     1.0  2  0.106446    0.207724\n",
+       "122    H1    Bank               age     1.0  3  0.107758    0.142440\n",
+       "123    H1    Bank               age     1.0  4  0.107594    0.225463\n",
+       "124    H1    Bank               age     1.0  5  0.109562    0.135684\n",
        "\n",
-       "[85 rows x 7 columns]"
+       "[125 rows x 7 columns]"
       ]
      },
      "execution_count": 2,
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\TEMP\\ipykernel_8484\\4161063730.py:5: SettingWithCopyWarning: \n",
+      "C:\\TEMP\\ipykernel_3836\\4161063730.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\TEMP\\ipykernel_8484\\2934726019.py:3: SettingWithCopyWarning: \n",
+      "C:\\TEMP\\ipykernel_3836\\2934726019.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\TEMP\\ipykernel_8484\\875874653.py:3: SettingWithCopyWarning: \n",
+      "C:\\TEMP\\ipykernel_3836\\875874653.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\TEMP\\ipykernel_18232\\1736791785.py:5: SettingWithCopyWarning: \n",
+      "C:\\TEMP\\ipykernel_3836\\1736791785.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\TEMP\\ipykernel_18232\\1408838934.py:3: SettingWithCopyWarning: \n",
+      "C:\\TEMP\\ipykernel_3836\\1408838934.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -411,9 +411,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\TEMP\\ipykernel_3836\\3946788968.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  recidivism_budget001.drop([\"Model\",\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -424,17 +435,6 @@
       "                      Error  Unfairness\n",
       "protected_feature                      \n",
       "sex                0.076169    0.057587\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\TEMP\\ipykernel_18232\\3946788968.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  recidivism_budget001.drop([\"Model\",\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n"
      ]
     }
    ],
@@ -480,7 +480,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\TEMP\\ipykernel_18232\\4274796855.py:5: SettingWithCopyWarning: \n",
+      "C:\\TEMP\\ipykernel_3836\\4274796855.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -521,7 +521,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\TEMP\\ipykernel_18232\\2599767191.py:3: SettingWithCopyWarning: \n",
+      "C:\\TEMP\\ipykernel_3836\\2599767191.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -543,6 +543,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\TEMP\\ipykernel_3836\\3504909996.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  zindi_budget001.drop([\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -555,17 +566,6 @@
       "EOP   sex                0.299157    0.069557\n",
       "ROC   sex                0.169209    0.066933\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\TEMP\\ipykernel_18232\\3504909996.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  zindi_budget001.drop([\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n"
-     ]
     }
    ],
    "source": [
@@ -574,6 +574,136 @@
     "zindi_budget001.drop([\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n",
     "print(zindi_budget001.groupby([\"Model\",'protected_feature']).mean())\n",
     "print(zindi_budget001.groupby([\"Model\",'protected_feature']).std())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            Error  Unfairness\n",
+      "Model protected_feature                      \n",
+      "EOP   age                0.129690    0.039331\n",
+      "H0    age                0.109332    0.164227\n",
+      "H1    age                0.109496    0.163137\n",
+      "ROC   age                0.253938    0.049279\n",
+      "                            Error  Unfairness\n",
+      "Model protected_feature                      \n",
+      "EOP   age                0.003706    0.023242\n",
+      "H0    age                0.003832    0.054635\n",
+      "H1    age                0.003868    0.051253\n",
+      "ROC   age                0.048461    0.030291\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\TEMP\\ipykernel_3836\\2797293079.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  bank_budget1.drop([\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# analyze bank dataset\n",
+    "bank = data[data['dataset'] == 'Bank']\n",
+    "#for budget == 1\n",
+    "bank_budget1 = bank[bank['budget'] == 1]\n",
+    "bank_budget1.drop([\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n",
+    "print(bank_budget1.groupby([\"Model\",'protected_feature']).mean())\n",
+    "print(bank_budget1.groupby([\"Model\",'protected_feature']).std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            Error  Unfairness\n",
+      "Model protected_feature                      \n",
+      "EOP   age                0.154454    0.083060\n",
+      "ROC   age                0.258103    0.071056\n",
+      "                            Error  Unfairness\n",
+      "Model protected_feature                      \n",
+      "EOP   age                0.032304    0.063057\n",
+      "ROC   age                0.052394    0.038440\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\TEMP\\ipykernel_3836\\2238215586.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  bank_budget01.drop([\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for budget == 0.1\n",
+    "bank_budget01 = bank[bank['budget'] == 0.1]\n",
+    "bank_budget01.drop([\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n",
+    "print(bank_budget01.groupby([\"Model\",'protected_feature']).mean())\n",
+    "print(bank_budget01.groupby([\"Model\",'protected_feature']).std())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            Error  Unfairness\n",
+      "Model protected_feature                      \n",
+      "EOP   age                0.242875    0.209611\n",
+      "ROC   age                0.327276    0.043731\n",
+      "                            Error  Unfairness\n",
+      "Model protected_feature                      \n",
+      "EOP   age                0.149442    0.149882\n",
+      "ROC   age                0.103226    0.041206\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\TEMP\\ipykernel_3836\\2297236105.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  bank_budget001.drop([\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for budget == 0.01\n",
+    "bank_budget001 = bank[bank['budget'] == 0.01]\n",
+    "bank_budget001.drop([\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n",
+    "print(bank_budget001.groupby([\"Model\",'protected_feature']).mean())\n",
+    "print(bank_budget001.groupby([\"Model\",'protected_feature']).std())\n"
    ]
   }
  ],
